@@ -26,11 +26,12 @@ Version 0.5: in development
   ``values_list`` no longer always includes an 'id' field in the
   fields list if you don't specify it.
 
-  Specifying no fields now returns an 'id' field::
+  Specifying no fields now returns **all** fields::
 
       S().values_list()
 
-  Specifying fields now returns only those fields and in that order::
+  Specifying fields now returns data for those fields in the order
+  the fields are specified::
 
       S().values_list('name', 'number')
 
@@ -51,6 +52,8 @@ Version 0.5: in development
   class, except ElasticUtils doesn't yet support declarative mapping
   definition.
 
+  See documentation for more details.
+
 * **By default, results are now DefaultMappingType.**
 
   In ElasticUtils v0.4, if the `S` was untyped and you didn't specify
@@ -61,12 +64,16 @@ Version 0.5: in development
   either ``values_dict`` or ``values_list``, then the results would
   come back as a list of `DefaultMappingType`.
 
+  See documentation for more details.
+
 * **elasticutils.contrib.django.models.SearchMixin is no more.**
 
   The `SearchMixin` class is replaced by `DjangoMappingType` which
   relates ElasticSearch mapping types to Django ORM models and
   `Indexable` which is a mixin that adds a bunch of index-related
   infrastructure.
+
+  See documentation for more details.
 
 **Changes:**
 
